--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Flexbox-step 0</title>
+    <title>Flexbox 0</title>
     <style>
       html {
         font-family: sans-serif;
@@ -26,7 +26,7 @@
         margin: 0;
       }
 
-      div {
+      article {
         padding: 10px;
         margin: 10px;
         background: #ddd;
@@ -40,52 +40,58 @@
       <h1>Exemple de boîte flexible</h1>
     </header>
     <main>
-      <div>
-        <h2>First article</h2>
+      <section>
+        <article>
+          <h2>Article 1</h2>
 
-        <p>
-          Tacos actually microdosing, pour-over semiotics banjo chicharrones
-          retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B
-          pork belly, everyday carry ennui pickled sriracha normcore hashtag
-          polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund
-          twee, leggings salvia iPhone photo booth health goth gastropub
-          hammock.
-        </p>
-      </div>
+          <p>
+            Commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+            Nulla consequat massa quis enim. Donec pede justo, fringilla vel,
+            aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut,
+            imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede
+            mollis pretium. Integer tincidunt.
+          </p>
+        </article>
 
-      <div>
-        <h2>Second article</h2>
+        <article>
+          <h2>Article 2</h2>
 
-        <p>
-          Tacos actually microdosing, pour-over semiotics banjo chicharrones
-          retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B
-          pork belly, everyday carry ennui pickled sriracha normcore hashtag
-          polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund
-          twee, leggings salvia iPhone photo booth health goth gastropub
-          hammock.
-        </p>
-      </div>
+          <p>
+            Tacos actually microdosing, pour-over semiotics banjo chicharrones
+            retro fanny pack portland everyday carry vinyl typewriter. Tacos
+            PBR&B pork belly, everyday carry ennui pickled sriracha normcore
+            hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed
+            trust fund twee, leggings salvia iPhone photo booth health goth
+            gastropub hammock.
+          </p>
+        </article>
 
-      <div>
-        <h2>Third article</h2>
+        <article>
+          <h2>Article 3</h2>
 
-        <p>
-          Tacos actually microdosing, pour-over semiotics banjo chicharrones
-          retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B
-          pork belly, everyday carry ennui pickled sriracha normcore hashtag
-          polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund
-          twee, leggings salvia iPhone photo booth health goth gastropub
-          hammock.
-        </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+            euismod faucibus ante, dapibus tristique felis hendrerit id. Sed
+            ipsum metus, posuere et eros vel, blandit maximus dui. Nunc augue
+            justo, tempus at semper vitae, mattis vel augue. Maecenas nec
+            fermentum mauris, in ultrices mauris. Aliquam aliquam aliquet orci,
+            nec posuere mi finibus rutrum. Nam in ultricies elit. Donec
+            elementum maximus volutpat.
+          </p>
 
-        <p>
-          Cray food truck brunch, XOXO +1 keffiyeh pickled chambray waistcoat
-          ennui. Organic small batch paleo 8-bit. Intelligentsia umami wayfarers
-          pickled, asymmetrical kombucha letterpress kitsch leggings
-          cold-pressed squid chartreuse put a bird on it. Listicle pickled man
-          bun cornhole heirloom art party.
-        </p>
-      </div>
+          <p>
+            Fusce posuere felis in quam cursus, nec vestibulum mauris semper.
+            Nullam in interdum ligula, sit amet sagittis dolor. In mattis ipsum
+            vitae consequat dapibus. Nulla ac porttitor enim, nec porttitor
+            nulla. Duis fringilla massa at finibus tempor. Pellentesque pretium
+            ultrices enim sit amet finibus. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Donec ac tempor tellus. Vivamus et
+            hendrerit turpis, nec faucibus quam. .
+          </p>
+        </article>
+      </section>
     </main>
   </body>
 </html>
