--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Flexbox 0</title>
+    <title>Flexbox</title>
     <style>
       html {
         font-family: sans-serif;
